--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,19 @@
-<header>Header</header>
+<header>
+    <a class="logo" href="">
+        <svg>
+            <use href=""></use>
+        </svg>
+    </a>
+
+    <nav class="header-nav">
+        <ul class="nav-list">
+            <li class="nav-list__item"></li>
+            <li class="nav-list__item"></li>
+            <li class="nav-list__item"></li>
+            <li class="nav-list__item"></li>
+            <li class="nav-list__item"></li>
+        </ul>
+    </nav>
+
+    <button class="order-btn" type="button"></button>
+</header>
