--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,6 +4,7 @@
 
   // text colors
   --main-text-color: #2c2c2c;
+  --secondary-text-color: #000000;
 
   // background colors
   --btn-default: #bbf330;
