--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,21 @@
-<header>Header</header>
+<header>
+  <nav class="nav">
+    <ul class="nav__list">
+      <li class="nav__item">
+        <a href="#home" class="nav__link nav__link--current">Home</a>
+      </li>
+      <li class="nav__item">
+        <a href="#hero" class="nav__link">About</a>
+      </li>
+      <li class="nav__item">
+        <a href="#benefits" class="nav__link">Service</a>
+      </li>
+      <li class="nav__item">
+        <a href="#favorites" class="nav__link">Menu</a>
+      </li>
+      <li class="nav__item">
+        <a href="#subscribe" class="nav__link">Contact</a>
+      </li>
+    </ul>
+  </nav>
+</header>
