--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,7 +1,10 @@
 h1,
 h2,
 h3,
-p {
+p,
+ul,
+li {
+  padding: 0;
   margin: 0;
 }
 
@@ -12,4 +15,15 @@ img {
 
   object-fit: cover;
   object-position: center;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: var(--main-text-color);
+
+  text-decoration: none;
+  display: inline-block;
 }
