--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -4,8 +4,11 @@
 
   //mobile
   @media screen and (min-width: $mobile) {
-    width: 480px;
+    // width: 480px;
     padding: 0 20px;
+    @media screen and (min-width: 480px) {
+      width: 480px;
+    }
   }
   //tablet
   @media screen and (min-width: $tablet) {
