--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -4,6 +4,10 @@
 
   @media screen and (min-width: 768px) {
     padding-top: 100px;
+    padding-bottom: 140px;
+  }
+
+  @media screen and (min-width: 1200px) {
     padding-bottom: 100px;
   }
 }
