--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,7 +3,7 @@ body {
   background-color: var(--bgc-main);
 
   font-family: var(--main-font);
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
 }
