--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -39,6 +39,10 @@
     font-size: 16px;
     line-height: calc(19 / 16);
   }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
+  }
 }
 
 .favorites-list {
@@ -63,7 +67,7 @@
   flex-basis: 100%;
   max-width: 280px;
   padding: 29px;
-  transition: border-color 250ms ease-in-out;
+  transition: border-color var(--animation);
 
   @media screen and (max-width: 767px) {
     &:nth-last-child(-n + 3) {
