--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,7 +18,7 @@
 @import './layout/header';
 @import './layout/hero';
 @import './layout/offerings';
-@import './layout/menu';
+@import './layout/favorites';
 @import './layout/customers';
 @import './layout/subscribe';
 @import './layout/footer';
