--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -1,35 +1,53 @@
 <section class="customers__bg__img">
   <h2 class="title">What our Customers Say</h2>
-  <p class="section__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  
+  <p class="section__description">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  </p>
+
   <ul class="customers__list">
     <li class="customers__list__item">
-      <svg class="customers__list__icon" width="" height="">
+      <!-- <svg class="customers__list__icon" width="" height="">
         <use href=""></use>
-      </svg>
+      </svg> -->
       <p class="review">
         “The Best app I have used to order food in a while, so many options to
         choose from too, I would recommend to a freind, No questions asked”
       </p>
 
       <div class="customers">
-        <img  class="customers__img" src="" alt="" />
+        <img
+          class="customers__img"
+          srcset="
+            ./src/images/customers/customers-icon1@1x.jpg 1x,
+            ./src/images/customers/customers-icon1@2x.jpg 2x
+          "
+          src="./src/images/customers/customers-icon1@1x.jpg"
+          alt="first-icon"
+        />
         <h4 class="customers__name">Sumith Shah</h4>
         <p class="customers__description">Some Dude</p>
       </div>
     </li>
 
     <li class="customers__list__item">
-      <svg class="customers__list__icon" width="" height="">
+      <!-- <svg class="customers__list__icon" width="" height="">
         <use href=""></use>
-      </svg>
+      </svg> -->
       <p class="review">
         “The ease with which I can just go in and order what i want was amazing,
         It has been a very pleasant experience ordering from this app”
       </p>
 
       <div class="customers">
-        <img  class="customers__img" src="" alt="" />
+        <img
+          class="customers__img"
+          srcset="
+            ./src/images/customers/customers-icon2@1x.jpg 1x,
+            ./src/images/customers/customers-icon2@2x.jpg 2x
+          "
+          src="./src/images/customers/customers-icon2@1x.jpg"
+          alt="second-icon"
+        />
         <h4 class="customers__name">Sumith Shah</h4>
         <p class="customers__description">Some Dude</p>
       </div>
