--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,26 +1,44 @@
 <!-- Герой -->
 <section class="hero">
     <div class="container">
+
+
+      <!-- <div class="hero__slider--but-l">
+        <svg class="hero__vector--left">
+          <use href="./images/hero/hero.svg#vector_left"></use>
+        </svg>
+      </div>
+      
+
+      <div class="hero__slider--but-r">
+        <svg class="hero__vector--right">
+          <use href="./images/hero/hero.svg#vector_right"></use>
+        </svg>
+      </div> -->
+
+
       <div class="hero__general--top">
       <div class="hero__info">
         <h1 class="hero__title--top">Enjoy Your Favorite Food From Anywhere</h1>
         <p class="hero__title--descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
         <button class="hero__btn">Order Now</button>
       </div>
-      <div class="hero__foto--top"><img class="hero__foto--size" src="./images/favorites/salat-tablet@2x.png" alt="Блюдо з котлетами, хлібом, соусом">
-      </div>
+      <div class="hero__foto--top">
+        
+        <img class="hero__foto--size" src="./images/hero/Foto1@1x.png" alt="Блюдо з котлетами, хлібом, соусом">
+        </div>
       </div>
       <div class="hero__general--bottom">
         <div class="hero__foto--bottom"><img src="./images/hero/aple@1x.png"></img></div>
-    <div class="hero__info--bottom">
-        <h2>What’s Special About Our Offerings</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+        <div class="hero__info--bottom">
+        <h2 class="hero__title--bottom">What’s Special About Our Offerings</h2>
+        <p class="hero__info--desckript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
         <ul class="hero__info--column">
-          <li><svg></svg><h3>Fasest Delivery</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p></li>
-          <li><svg></svg><h3>Easy To Order</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p></li>
+          <li><svg class="hero__icon--size"><use href="./images/hero/hero.svg#icon-rocket"></use></svg><h3 class="hero__title--position">Fasest Delivery</h3><p class="hero__title--column">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p></li>
+          <li><svg class="hero__icon--size"><use href="./images/hero/hero.svg#icon-order"></use></svg><h3 class="hero__title--position">Easy To Order</h3><p class="hero__title--column">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p></li>
         </ul>
-        <button>Order Now</button>
-    </div>
+        <button class="hero__btn--bottom">Order Now</button>
+        </div>
       </div>
     </div>
   </section>
