--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,5 +1,7 @@
 .hero__general--top{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .hero__info{
@@ -11,23 +13,55 @@
     font-size: 48px;
     line-height: 120%;
     color: #2C2C2C;
-    margin-top: 159px;
+    
 }
 
 .hero__title--descript{
     margin-top: 28px;
     margin-bottom: 40px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #2C2C2C;
 }
 .hero__foto--top{
     box-sizing: border-box;
     border: 26px solid #FFE550;
     border-radius: 50%;
     width: 580px;
-    margin-left: 30px;
+   
+    margin-top: 16px;
 }
 .hero__foto--size{
     width: 528px;
 }
+
+// .hero__slider--but-l{
+//     height: 40px;
+//     width: 48px;
+//     position: absolute;
+//     right: 464px;
+//     top: 365px;
+
+// }
+// .hero__slider--but-r{
+//     height: 40px;
+//     width: 48px;
+//     position: absolute;
+//     right: -91px;
+//     top: 365px;
+    
+// }
+// .hero__vector--left{
+//     height: 29px;
+//     width: 16px;
+// }
+// .hero__vector--right{
+//     height: 29px;
+//     width: 16px;
+// }
+
+
 .hero__btn{
     background: #BBF330;
     font-weight: 400;
@@ -39,25 +73,91 @@
     @extend %btn;
     
 }
+.hero__btn--bottom{
+    margin-top: 32px;
+    height: 40px;
+    width: 106px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    text-align: right;
+    color: #2C2C2C;
+    border: 2px solid #7EB101;
+    text-align: center;
+    @extend %btn;
+
+}
 
 .hero__general--bottom{
+    background-image: url(../images/hero/background_dasktop.png);
+    background-size: cover;
+    align-items: center;
+    z-index: 1;
     display: flex;
     gap: 90px;
+    position: relative;
+    top: -130px;
 }
 .hero__foto--bottom{
     width: 550px;
     box-sizing: border-box;
     border: 26px solid #FFE550;
     border-radius: 50%;
+    background-color: white;
+    margin-top: 231px;
+    margin-bottom: 75px;
+    &>img{
+        position: relative;
+        left: 45px;
+        bottom: 60px;
+    }
 
 }
 
 .hero__info--bottom{
+    
     width: 526px;
     margin-top: 113px;
+    
+}
+.hero__title--bottom{
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 120%;
+    color: #2C2C2C;
+    margin-bottom: 20px;
+    padding-top: 70px;
+}
+.hero__info--desckript{
+    margin-bottom: 40px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #2C2C2C;
+
 }
 
 .hero__info--column{
-
     display: flex;
+    gap: 64px;
+}
+.hero__title--position{
+    margin-top: 10px;
+    margin-bottom: 16px;
+    font-weight: 700;
+    font-size: 17.0833px;
+    line-height: 140%;
+    color: #2C2C2C;
+}
+.hero__title--column{
+    width: 255px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #2C2C2C;
+}
+.hero__icon--size{
+    width: 48px;
+    height: 48px;
+
 }
