--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -36,30 +36,43 @@
     width: 528px;
 }
 
-// .hero__slider--but-l{
-//     height: 40px;
-//     width: 48px;
-//     position: absolute;
-//     right: 464px;
-//     top: 365px;
+.hero__slider--but-l{
+    height: 40px;
+    width: 48px;
+    position: absolute;
+    right: 481px;
+    top: 357px;
+    background: #FEFEFE;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    transform: rotate(360deg);
+    align-items: center;
 
-// }
-// .hero__slider--but-r{
-//     height: 40px;
-//     width: 48px;
-//     position: absolute;
-//     right: -91px;
-//     top: 365px;
+}
+.hero__slider--but-r{
+    height: 40px;
+    width: 48px;
+    position: absolute;
+    right: -81px;
+    top: 357px;
+    background: #FEFEFE;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    transform: rotate(360deg);
+    align-items: center;
     
-// }
-// .hero__vector--left{
-//     height: 29px;
-//     width: 16px;
-// }
-// .hero__vector--right{
-//     height: 29px;
-//     width: 16px;
-// }
+    
+}
+.hero__vector--left{
+    height: 29px;
+    width: 16px;
+    margin-left: 12px;
+    margin-top: 5px;
+}
+.hero__vector--right{
+    height: 29px;
+    width: 16px;
+}
 
 
 .hero__btn{
