--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -119,6 +119,8 @@
     background-color: white;
     margin-top: 231px;
     margin-bottom: 75px;
+    outline: 5px solid rgba(255, 255, 255, 0.5);
+    margin-left: 16px;
     &>img{
         position: relative;
         left: 45px;
