--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,21 +1,41 @@
-<header>
-  <nav class="nav">
-    <ul class="nav__list">
-      <li class="nav__item">
-        <a href="#home" class="nav__link nav__link--current">Home</a>
-      </li>
-      <li class="nav__item">
-        <a href="#hero" class="nav__link">About</a>
-      </li>
-      <li class="nav__item">
-        <a href="#benefits" class="nav__link">Service</a>
-      </li>
-      <li class="nav__item">
-        <a href="#favorites" class="nav__link">Menu</a>
-      </li>
-      <li class="nav__item">
-        <a href="#subscribe" class="nav__link">Contact</a>
-      </li>
-    </ul>
-  </nav>
+<header class="header">
+  <div class="container">
+    <div class="header__wrap">
+      <a class="logo" href="#home">
+        <svg class="logo__svg" width="65" height="51">
+          <use href="./images/sprite.svg#logo"></use>
+        </svg>
+      </a>
+      <div class="nav-wrap">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="#hero" class="nav__link">About</a>
+            </li>
+            <li class="nav__item">
+              <a href="#offerings" class="nav__link">Service</a>
+            </li>
+            <li class="nav__item">
+              <a href="#favorites" class="nav__link">Menu</a>
+            </li>
+            <li class="nav__item">
+              <a href="#subscribe" class="nav__link">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="btn-order">Order Now</button>
+      </div>
+
+      <button class="btn-menu">
+        <a class="btn-menu__link" href="#home">
+          <svg class="btn-menu__svg" width="28" height="28">
+            <use href="./images/sprite.svg#mobile-menu"></use>
+          </svg>
+        </a>
+      </button>
+    </div>
+  </div>
 </header>
