--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,49 @@
+.header {
+  background-color: var(--bgc-secondary);
+}
+.header__wrap {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn-menu {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 28px;
+  height: 28px;
+  border: none;
+
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+}
+.btn-menu__link {
+  background-color: var(--bgc-secondary);
+}
+.btn-menu__svg {
+  fill: var(--dark-green);
+  transition: fill var(--animation);
+  .btn-menu:hover &,
+  .btn-menu:focus & {
+    fill: var(--yellow-main);
+  }
+}
+.nav-wrap {
+  display: flex;
+  align-items: baseline;
+  gap: 28px;
+  margin-left: auto;
+}
 .nav {
-  @media screen and (max-width: $mobile) {
-    // display: none;
+  @media screen and (max-width: 767px) {
+    display: none;
   }
   @media screen and (min-width: $tablet) {
   }
@@ -22,14 +65,14 @@
 }
 
 .nav__link {
-  line-height: calc(19 / 16);
+  line-height: calc(16 / 14);
 
   padding-left: 16px;
   padding-top: 16px;
   padding-bottom: 16px;
 
   color: var(--secondary-text-color);
-  background-color: var(--bgc-main);
+  background-color: var(--bgc-secondary);
 
   display: block;
 
@@ -49,36 +92,43 @@
     line-height: calc(16 / 14);
 
     color: var(--secondary-text-color);
-    background-color: var(--bgc-main);
+    background-color: var(--bgc-secondary);
 
     transition: color var(--animation), background-color var(--animation);
 
     &:hover,
     &:focus {
       color: var(--btn-default);
-      background-color: var(--bgc-main);
+      background-color: var(--bgc-secondary);
+      text-decoration: underline;
     }
   }
 }
-.nav__link--current {
+.btn-order {
+  width: 100px;
+  height: 32px;
+
+  display: inline-flex;
+  border-radius: 30px;
+
+  font-size: 14px;
+  letter-spacing: calc(21 / 14);
+  color: var(--main-text-color);
+  border: none;
   background-color: var(--btn-default);
-  color: var(--secondary-text-color);
+  transition: background-color, var(--animation);
 
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   @media screen and (min-width: $tablet) {
-    position: relative;
-    background-color: var(--bgc-main);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 
-    &::after {
-      position: absolute;
-      bottom: 27px;
-      left: 0;
-      z-index: 200;
-      content: '';
-      width: 100%;
-      height: 1px;
-      color: var(--btn-default);
-
-      display: block;
+    &:hover,
+    &:focus {
+      background-color: var(--btn-onhover);
     }
   }
 }
