--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,7 +15,7 @@
 
         <div class="hero__slider--but-l">
           <svg class="hero__vector--left">
-            <use href="./images/hero/hero.svg#vector_left"></use>
+            <use class="hero__vector--color" href="./images/hero/hero.svg#vector_left"></use>
           </svg>
         </div>
 
@@ -23,7 +23,7 @@
 
         <div class="hero__slider--but-r">
         <svg class="hero__vector--left">
-          <use href="./images/hero/hero.svg#vector_right"></use>
+          <use class="hero__vector--color" href="./images/hero/hero.svg#vector_right"></use>
         </svg>
         </div>
       </div>
