--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -29,6 +29,7 @@
     border: 26px solid var(--yellow-main);
     border-radius: 50%;
     width: 580px;
+    position: relative;
    
     margin-top: 16px;
 }
@@ -40,26 +41,34 @@
     height: 40px;
     width: 48px;
     position: absolute;
-    right: 481px;
-    top: 357px;
+    right: 515px;
+    top: 260px;
     background: var(--bgc-main);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
     transform: rotate(360deg);
     align-items: center;
+    &:hover .hero__vector--color{
+        fill:  var(--dark-green);
+    }
+    
 
 }
 .hero__slider--but-r{
     height: 40px;
     width: 48px;
     position: absolute;
-    right: -81px;
-    top: 357px;
+    right: -38px;
+    top: 260px;
     background: var(--bgc-main);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
     transform: rotate(360deg);
     align-items: center;
+    &:hover .hero__vector--color{
+        fill:  var(--dark-green);
+    }
+    
     
     
 }
@@ -72,7 +81,11 @@
 .hero__vector--right{
     height: 29px;
     width: 16px;
+    
 }
+
+
+    
 
 
 .hero__btn{
@@ -83,7 +96,14 @@
     text-align: right;
     color: var(--main-text-color);
     border: none;
+    height: 32px;
+    width: 100px;
+    text-align: center;
     @extend %btn;
+
+    &:hover{
+        background-color: var(--btn-onhover);
+    }
     
 }
 .hero__btn--bottom{
@@ -98,6 +118,10 @@
     border: 2px solid var(--dark-green);
     text-align: center;
     @extend %btn;
+
+    &:hover{
+        border: 2px solid #597D00;
+    }
 
 }
 
