--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -1,10 +1,11 @@
 %btn {
   border-radius: var(--btn-input-radius);
 
-  font-weight: 700;
+  font-weight: 400;
   font-size: 14px;
   line-height: calc(21 / 14);
 
+  color: var(--main-text-color);
   &:hover,
   &:focus {
     cursor: pointer;
