--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -1,4 +1,5 @@
-<section class="customers__bg__img">
+<section class="section customers__bg__img">
+  <div class="container"></div>
   <h2 class="title">What our Customers Say</h2>
   <p class="section__description">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -13,8 +14,7 @@
         “The Best app I have used to order food in a while, so many options to
         choose from too, I would recommend to a freind, No questions asked”
       </p>
-
-      <div class="customers">
+      <div class="profile">
         <img
           class="customers__img"
           srcset="
@@ -24,8 +24,10 @@
           src="./images/customers/customers-icon1@1x.jpg"
           alt="first-icon"
         />
-        <h4 class="customers__name">Sumith Shah</h4>
-        <p class="customers__description">Some Dude</p>
+        <div class="customers">
+          <p class="customers__name">Sumith Shah</p>
+          <p class="customers__description">Some Dude</p>
+        </div>
       </div>
     </li>
 
@@ -38,18 +40,20 @@
         It has been a very pleasant experience ordering from this app”
       </p>
 
-      <div class="customers">
+      <div class="profile">
         <img
           class="customers__img"
           srcset="
-            ./images/customers/customers-icon2@1x.jpg 1x,
-            ./images/customers/customers-icon2@2x.jpg 2x
+            ./images/customers/customers-icon1@1x.jpg 1x,
+            ./images/customers/customers-icon1@2x.jpg 2x
           "
-          src="./images/customers/customers-icon2@1x.jpg"
-          alt="second-icon"
+          src="./images/customers/customers-icon1@1x.jpg"
+          alt="first-icon"
         />
-        <h4 class="customers__name">Sumith Shah</h4>
-        <p class="customers__description">Some Dude</p>
+        <div class="customers">
+          <p class="customers__name">Sumith Shah</p>
+          <p class="customers__description">Some Dude</p>
+        </div>
       </div>
     </li>
   </ul>
