--- a/src/sass/layout/_customers.scss
+++ b/src/sass/layout/_customers.scss
@@ -1,5 +1,18 @@
+.section {
+  @media screen and (min-width: $mobile) {
+    padding: 60px 20px;
+  }
+  @media screen and (min-width: $tablet) {
+    padding: 60px 32px 120px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding: 100px 125px 200px 16px;
+  }
+}
 .customers__bg__img {
-  @media screen and (max-width: $mobile) {
+  background: no-repeat;
+  @media screen and (min-width: $mobile) {
+    height: 770px;
     background-image: url(../images/customers/customers-bg-mob@1x.jpg);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -8,6 +21,7 @@
     }
   }
   @media screen and (min-width: $tablet) {
+    height: 544px;
     background-image: url(../images/customers/customers-bg-tab@1x.jpg);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -16,6 +30,7 @@
     }
   }
   @media screen and (min-width: $desktop) {
+    height: 650px;
     background-image: url(../images/customers/customers-bg-desk@1x.jpg);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -31,6 +46,7 @@
   line-height: 33px;
 
   color: var(--main-text-color);
+  margin-bottom: 20px;
 }
 .section__description {
   font-family: var(--main-font);
@@ -39,19 +55,20 @@
   line-height: 16px;
 
   color: var(--main-text-color);
+  margin-bottom: 32px;
 }
 .customers__list {
   display: flex;
   flex-wrap: wrap;
-  
-  @media screen and (max-width: $mobile) {
-   gap: 24px;
+
+  @media screen and (min-width: $mobile) {
+    gap: 24px;
   }
   @media screen and (min-width: $tablet) {
-   gap: 32px;
+    gap: 32px;
   }
   @media screen and (min-width: $desktop) {
-   gap: 140px;
+    gap: 140px;
   }
 
   &__item {
@@ -69,26 +86,38 @@
 }
 
 .review {
+  text-align: left;
   font-family: var(--main-font);
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
 
   color: var(--main-text-color);
+  margin-top: 28px;
+  margin-bottom: 40px;
+}
+.profile {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
 }
 .customers {
+  padding-right: 16px;
   border-right: 0.854167px solid #7eb101;
   display: flex;
+  flex-direction: column;
 
   &__img {
+    width: 48px;
   }
   &__name {
     font-family: var(--main-font);
-    font-weight: 600;
+    font-weight: 500;
     font-size: 13.6667px;
     line-height: 150%;
 
     color: var(--main-text-color);
+    margin: 0;
   }
   &__description {
     font-family: var(--main-font);
