--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,45 +14,22 @@
       <div class="hero__foto--top">
 
         <div class="hero__slider--but-l">
-          <svg class="hero__vector--left">
-            <use class="hero__vector--color" href="./images/hero/hero.svg#vector_left"></use>
+          <svg  class="hero__vector--left" >
+            <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left" ></use>
           </svg>
         </div>
 
-        <img class="hero__foto--size" src="./images/hero/Foto1@1x.png" alt="Блюдо з котлетами, хлібом, соусом">
+        <img class="hero__foto--size" src="./images/hero/hero1_1200@1x.png"
+        <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: 1200px)"
+         alt="Блюдо з котлетами, хлібом, соусом">
 
         <div class="hero__slider--but-r">
-        <svg class="hero__vector--left">
-          <use class="hero__vector--color" href="./images/hero/hero.svg#vector_right"></use>
+        <svg  class="hero__vector--left" >
+          <use class="hero__vector--color" href="./images/sprite.svg#arrow-right"></use>
         </svg>
         </div>
       </div>
     </div>
-    <div class="hero__general--bottom">
-      <div class="hero__foto--bottom"><img src="./images/hero/aple@1x.png"></img></div>
-      <div class="hero__info--bottom">
-        <h2 class="hero__title--bottom">What’s Special About Our Offerings</h2>
-        <p class="hero__info--desckript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-          enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
-          diam libero vitae erat.</p>
-        <ul class="hero__info--column">
-          <li><svg class="hero__icon--size">
-              <use href="./images/hero/hero.svg#icon-rocket"></use>
-            </svg>
-            <h3 class="hero__title--position">Fasest Delivery</h3>
-            <p class="hero__title--column">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-              enim in eros.</p>
-          </li>
-          <li><svg class="hero__icon--size">
-              <use href="./images/hero/hero.svg#icon-order"></use>
-            </svg>
-            <h3 class="hero__title--position">Easy To Order</h3>
-            <p class="hero__title--column">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-              enim in eros.</p>
-          </li>
-        </ul>
-        <button class="hero__btn--bottom">Order Now</button>
-      </div>
-    </div>
-  </div>
-</section>
+  </div> 
+  
+</section>  
