--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -7,15 +7,12 @@
 .hero__info{
     width: 502px;
 }
-
 .hero__title--top{
     font-weight: 700;
     font-size: 48px;
     line-height: 120%;
-    color: var(--main-text-color);
-    
+    color: var(--main-text-color);   
 }
-
 .hero__title--descript{
     margin-top: 28px;
     margin-bottom: 40px;
@@ -25,40 +22,36 @@
     color: var(--main-text-color);
 }
 .hero__foto--top{
-    box-sizing: border-box;
     border: 26px solid var(--yellow-main);
     border-radius: 50%;
-    width: 580px;
+    width: 608px;
     position: relative;
-   
     margin-top: 16px;
+    margin-right: 14px;
 }
 .hero__foto--size{
-    width: 528px;
+    width: 580px;
 }
-
 .hero__slider--but-l{
     height: 40px;
     width: 48px;
     position: absolute;
-    right: 515px;
-    top: 260px;
+    right: 545px;
+    top: 259px;
     background: var(--bgc-main);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
-    transform: rotate(360deg);
+    transform: rotate(0deg);
     align-items: center;
     &:hover .hero__vector--color{
         fill:  var(--dark-green);
     }
-    
-
 }
 .hero__slider--but-r{
     height: 40px;
     width: 48px;
     position: absolute;
-    right: -38px;
+    right: -40px;
     top: 260px;
     background: var(--bgc-main);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
@@ -67,26 +60,28 @@
     align-items: center;
     &:hover .hero__vector--color{
         fill:  var(--dark-green);
+    }    
+}
+
+.hero__vector--color{
+    height: 30px;
+    width: 30px;
+    fill: var(--main-text-color);
+    &:hover{
+        fill: var(--dark-green);
     }
-    
-    
-    
 }
 .hero__vector--left{
-    height: 29px;
-    width: 16px;
-    margin-left: 12px;
-    margin-top: 5px;
+    height: 50px;
+    width: 50px;
+    // margin-left: 12px;
+    // margin-top: 5px;
 }
 .hero__vector--right{
-    height: 29px;
-    width: 16px;
+    height: 40px;
+    // width: 16px;
     
 }
-
-
-    
-
 
 .hero__btn{
     background: var(--btn-default);
@@ -106,97 +101,4 @@
     }
     
 }
-.hero__btn--bottom{
-    margin-top: 32px;
-    height: 40px;
-    width: 106px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 150%;
-    text-align: right;
-    color: var(--main-text-color);
-    border: 2px solid var(--dark-green);
-    text-align: center;
-    @extend %btn;
 
-    &:hover{
-        border: 2px solid var(--border-onhover);
-    }
-
-}
-
-.hero__general--bottom{
-    background-image: url(../images/hero/background_dasktop.png);
-    background-size: cover;
-    align-items: center;
-    z-index: 1;
-    display: flex;
-    gap: 90px;
-    position: relative;
-    top: -130px;
-}
-.hero__foto--bottom{
-    width: 550px;
-    box-sizing: border-box;
-    border: 26px solid var(--yellow-main);
-    border-radius: 50%;
-    background-color: var(--bgc-secondary);
-    margin-top: 231px;
-    margin-bottom: 75px;
-    outline: 5px solid rgba(255, 255, 255, 0.5);
-    margin-left: 16px;
-    &>img{
-        position: relative;
-        left: 45px;
-        bottom: 60px;
-    }
-
-}
-
-.hero__info--bottom{
-    
-    width: 526px;
-    margin-top: 113px;
-    
-}
-.hero__title--bottom{
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 120%;
-    color: var(--main-text-color);
-    margin-bottom: 20px;
-    padding-top: 70px;
-}
-.hero__info--desckript{
-    margin-bottom: 40px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    color: var(--main-text-color);
-
-}
-
-.hero__info--column{
-    display: flex;
-    gap: 64px;
-}
-.hero__title--position{
-    margin-top: 10px;
-    margin-bottom: 16px;
-    font-weight: 700;
-    font-size: 17.0833px;
-    line-height: 140%;
-    color: var(--main-text-color);
-}
-.hero__title--column{
-    width: 255px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 150%;
-    color: var(--main-text-color);
-}
-.hero__icon--size{
-    width: 48px;
-    height: 48px;
-
-}
