--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -22,7 +22,7 @@
         "
         media="(max-width: 767px)"
       />
-      <img src="./images/subscribe/banana@1x_lg.png" alt="yellow banana" />
+      <img src="./images/subscribe/banana@1x_sm.png" alt="yellow banana" />
     </picture>
     <div class="subscribe__wrap">
       <h2 class="subscribe__title">Subscribe To Get Special Offers</h2>
@@ -34,7 +34,9 @@
         <input
           class="subscribe__input"
           name="email"
-          type="text"
+          required
+          type="email"
+          required
           placeholder="Enter your email"
           required
         />
