--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,33 +1,118 @@
+.container{
+    outline: 2px solid;
+    background-color: #F5F5F5;
+}
+
 .hero__general--top{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+
+    @media screen  and (min-width: 320px){
+        flex-direction: column;
+        
+    }
+    @media screen  and (min-width: 1200px){
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+    }
 }
 
 .hero__info{
-    width: 502px;
+    
+    @media screen  and (min-width: 320px){
+        width: 280px;
+        
+    }
+    @media screen  and (min-width: 768px){
+        width: 704px;
+        
+    }
+    @media screen  and (min-width: 1200px){
+        width: 502px;
+    }
 }
 .hero__title--top{
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 120%;
-    color: var(--main-text-color);   
+    color: var(--main-text-color);  
+    @media screen  and (min-width: 320px){
+        margin-top: 60px;
+        font-size: 28px;
+        line-height: 33px;   
+    } 
+    @media screen  and (min-width: 768px){
+        width: 537px;
+        font-size: 42px;
+        line-height: 120%;    
+    }
+    @media screen  and (min-width: 1200px){
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 120%;
+        margin-top: 0px;
+        width: 503px;
+
+    }
 }
 .hero__title--descript{
-    margin-top: 28px;
-    margin-bottom: 40px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
     color: var(--main-text-color);
+    @media screen  and (min-width: 320px){
+        font-size: 14px;
+        margin-top: 28px;
+        margin-bottom: 28px;    
+    } 
+    @media screen  and (min-width: 768px){
+        width: 336px; 
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%; 
+        margin-top: 44px;
+        margin-bottom: 40px;
+    }
+    @media screen  and (min-width: 1200px){
+        margin-top: 28px;
+        margin-bottom: 40px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        width: 503px; 
+
+    }
+
 }
 .hero__foto--top{
-    border: 26px solid var(--yellow-main);
-    border-radius: 50%;
-    width: 608px;
     position: relative;
-    margin-top: 16px;
-    margin-right: 14px;
+    border-radius: 50%;
+    
+    @media screen  and (min-width: 320px){
+        display: none;    
+    } 
+    @media screen  and (min-width: 768px){
+        display: block;
+        width: 336px;
+        height: 320px;
+        border: 14px solid var(--yellow-main);
+        
+        position: absolute;
+        top: 135px;
+        left: 370px;
+    }
+    @media screen  and (min-width: 1200px){
+        display: block;
+        
+        position: relative;
+        border: 26px solid var(--yellow-main);
+        margin-top: 16px;
+        margin-right: 14px;
+        width: 580px;
+        height: 580px;
+        top: 14px;
+        left: 0px;
+
+    }
 }
 .hero__foto--size{
     width: 580px;
@@ -46,6 +131,17 @@
     &:hover .hero__vector--color{
         fill:  var(--dark-green);
     }
+    @media screen  and (min-width: 768px){
+        right: 290px;
+        top: 135px;
+        height: 0px;
+    }
+    @media screen  and (min-width: 1200px){
+        right: 520px;
+        top: 250px;
+        height: 40px;
+    }
+
 }
 .hero__slider--but-r{
     height: 40px;
@@ -60,12 +156,23 @@
     align-items: center;
     &:hover .hero__vector--color{
         fill:  var(--dark-green);
-    }    
+    } 
+    @media screen  and (min-width: 768px){
+        right: -33px;
+        top: 135px;
+        height: 0px;
+
+    }  
+    @media screen  and (min-width: 1200px){
+        right: -40px;
+        top: 250px;
+        height: 40px;
+    } 
 }
 
 .hero__vector--color{
-    height: 30px;
-    width: 30px;
+    // height: 30px;
+    // width: 30px;
     fill: var(--main-text-color);
     &:hover{
         fill: var(--dark-green);
@@ -76,6 +183,16 @@
     width: 50px;
     // margin-left: 12px;
     // margin-top: 5px;
+    @media screen  and (min-width: 768px){
+        height: 35px;
+        width: 45px;
+        
+    }
+    @media screen  and (min-width: 1200px){
+        height: 47px;
+
+    }
+
 }
 .hero__vector--right{
     height: 40px;
@@ -95,6 +212,13 @@
     width: 100px;
     text-align: center;
     @extend %btn;
+    @media screen  and (min-width: 320px){
+        margin-bottom: 28px;
+        
+    }
+    @media screen  and (min-width: 1200px){
+        margin-bottom: 0px;
+    }
 
     &:hover{
         background-color: var(--btn-onhover);
