tablet-version-done

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -46,25 +46,27 @@
         >
       </p>
     </div>
-    <div class="footer__terms">
-      <ul class="footer-terms__list">
-        <li class="footer-terms__item">
-          <a class="footer-terms__link" href="" rel="noopener norefferer"
-            >Privacy Policy</a
-          >
-        </li>
-        <li class="footer-terms__item">
-          <a class="footer-terms__link" href="" rel="noopener norefferer"
-            >Terms of Service</a
-          >
-        </li>
-        <li class="footer-terms__item">
-          <a class="footer-terms__link" href="" rel="noopener norefferer"
-            >Cookies Settings</a
-          >
-        </li>
-      </ul>
+    <div class="footer-terms__wrap">
+      <div class="footer__terms">
+        <ul class="footer-terms__list">
+          <li class="footer-terms__item">
+            <a class="footer-terms__link" href="" rel="noopener norefferer"
+              >Privacy Policy</a
+            >
+          </li>
+          <li class="footer-terms__item">
+            <a class="footer-terms__link" href="" rel="noopener norefferer"
+              >Terms of Service</a
+            >
+          </li>
+          <li class="footer-terms__item">
+            <a class="footer-terms__link" href="" rel="noopener norefferer"
+              >Cookies Settings</a
+            >
+          </li>
+        </ul>
+      </div>
+      <p class="footer__right">2022 FoodSta. All right reserved.</p>
     </div>
-    <p class="footer__right">2022 FoodSta. All right reserved.</p>
   </div>
 </footer>
