--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -29,8 +29,18 @@
   margin-left: 81px;
   margin-right: 101px;
   margin-bottom: 40px;
-}
 
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+    margin-top: 118px;
+    margin-right: 0;
+    margin-left: 114px;
+    margin-bottom: 57px;
+  }
+}
+.footer-nav__list {
+  display: inline-flex;
+}
 .footer-nav__item {
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -38,8 +48,16 @@
 
   padding-bottom: 20px;
 
+  @media screen and (min-width: 768px) {
+    padding-right: 28px;
+  }
+
   &:last-child {
     padding-bottom: 0;
+
+    @media screen and (min-width: 768px) {
+      padding-right: 0;
+    }
   }
 }
 .footer-nav__link {
@@ -55,6 +73,9 @@
 .footer-subscribe__form {
   display: flex;
   flex-direction: column;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 .footer-subscribe__input {
   display: block;
@@ -65,6 +86,12 @@
   border-radius: 30px;
   margin-bottom: 20px;
   outline: none;
+
+  @media screen and (min-width: 768px) {
+    width: 279px;
+    margin-right: 13px;
+    margin-bottom: 12px;
+  }
 
   &:valid {
     border: 0.854167px solid var(--dark-green);
@@ -98,6 +125,10 @@
   color: var(--main-text-color);
   outline: none;
 
+  @media screen and (min-width: 768px) {
+    margin-left: 0;
+  }
+
   &:hover,
   &:focus {
     background-color: var(--yellow-main);
@@ -113,14 +144,39 @@
   text-decoration: underline;
   color: var(--dark-green);
 }
+.footer-terms__wrap {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 100px;
+  }
+}
 .footer__terms {
   margin-top: 60px;
   margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+    margin-bottom: 8px;
+  }
 }
 .footer-terms__list {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+}
+.footer-terms__item {
+  &:last-child {
+    @media screen and (min-width: 768px) {
+      padding-right: 0;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    padding-right: 20px;
+  }
 }
 .footer-terms__link {
   font-size: 10px;
@@ -137,4 +193,10 @@
   font-size: 10px;
   line-height: calc(12 / 10);
   color: var(--main-text-color);
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 8px;
+    justify-content: center;
+    margin-left: auto;
+  }
 }
