--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -18,11 +18,11 @@
             <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left" ></use>
           </svg>
         </div>
-
-        <img class="hero__foto--size" src="./images/hero/hero1_1200@1x.png"
-        <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: 1200px)"
-         alt="Блюдо з котлетами, хлібом, соусом">
-
+      <picture>
+        
+        <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: 1200px)"/>
+        <img class="hero__foto--size" src="./images/hero/hero1_1200@1x.png" alt="Фото блюда"/>
+      </picture>
         <div class="hero__slider--but-r">
         <svg  class="hero__vector--left" >
           <use class="hero__vector--color" href="./images/sprite.svg#arrow-right"></use>
