--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -7,9 +7,33 @@
 
   <ul class="customers__list">
     <li class="customers__list__item">
-      <!-- <svg class="customers__list__icon" width="" height="">
-        <use href=""></use>
-      </svg> -->
+      <ul class="rate__list">
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+      </ul>
       <p class="review">
         “The Best app I have used to order food in a while, so many options to
         choose from too, I would recommend to a freind, No questions asked”
@@ -32,9 +56,33 @@
     </li>
 
     <li class="customers__list__item">
-      <!-- <svg class="customers__list__icon" width="" height="">
-        <use href=""></use>
-      </svg> -->
+      <ul class="rate__list">
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="rate__list__icon" width="17" height="16">
+            <use href="/src/images/sprite.svg#star"></use>
+          </svg>
+        </li>
+      </ul>
       <p class="review">
         “The ease with which I can just go in and order what i want was amazing,
         It has been a very pleasant experience ordering from this app”
