--- a/src/sass/layout/_customers.scss
+++ b/src/sass/layout/_customers.scss
@@ -1,9 +1,13 @@
 .section {
+  background-color: #fff;
   align-items: center;
   padding: 60px 20px;
   margin-left: auto;
   margin-right: auto;
   width: 320px;
+  @media screen and (min-width: $mobile) {
+    width: 480px;
+  }
   @media screen and (min-width: $tablet) {
     padding: 60px 32px 120px;
     margin-left: auto;
@@ -30,7 +34,15 @@
     (min-resolution: 2dppx) {
     background-image: url(../images/customers/customers-bg-mob@2x.jpg);
   }
-
+  @media screen and (min-width: $mobile) {
+    background-size: 480px 770px;
+    background-image: url(../images/customers/customers-bg-480@1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/customers/customers-bg-480@2x.jpg);
+    }
+  }
   @media screen and (min-width: $tablet) {
     background-size: 768px 510px;
     background-image: url(../images/customers/customers-bg-tab@1x.jpg);
