--- a/src/sass/layout/_offerings.scss
+++ b/src/sass/layout/_offerings.scss
@@ -30,7 +30,7 @@
   @media screen and (min-width: $desktop) {
     margin-top: -40px;
     padding-top: 177px;
-    padding-bottom: 75px;
+    padding-bottom: 43px;
 
     background-image: url(../images/offerings/background@1x_lg.png);
     background-size: cover;
@@ -80,7 +80,6 @@
   &__description {
     margin-bottom: 28px;
     font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.14;
 
@@ -134,6 +133,13 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
+
+    @media screen and (min-width: $tablet) {
+      line-height: 1.16;
+    }
+    @media screen and (min-width: $desktop) {
+      line-height: 1.2;
+    }
 
     color: var(--title-text-color);
   }
