--- a/src/partials/offerings.html
+++ b/src/partials/offerings.html
@@ -26,7 +26,7 @@
           media="(max-width: 767px)"
           type="image/png"
         />
-        <img src="./images/offerings/apple@1x_lg.png" alt="Apple" />
+        <img src="./images/offerings/apple@1x_sm.png" alt="Apple" />
       </picture>
     </div>
     <div class="offerings__block">
