--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -14,7 +14,7 @@
 
   // border colors
   --dark-green: #7eb101;
-  --border-onhover: ##597d00;
+  --border-onhover: #597d00;
   --yellow-main: #ffe550;
   --error-color: #ff705d;
 
