--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -42,10 +42,10 @@
         <img
           class="customers__img"
           srcset="
-            ./images/customers/customers-icon1@1x.jpg 1x,
-            ./images/customers/customers-icon1@2x.jpg 2x
+            ./images/customers/customers-icon1@1x.png 1x,
+            ./images/customers/customers-icon1@2x.png 2x
           "
-          src="./images/customers/customers-icon1@1x.jpg"
+          src="./images/customers/customers-icon1@1x.png"
           alt="first-icon"
         />
         <div class="customers">
@@ -92,10 +92,10 @@
         <img
           class="customers__img"
           srcset="
-            ./images/customers/customers-icon2@1x.jpg 1x,
-            ./images/customers/customers-icon2@2x.jpg 2x
+            ./images/customers/customers-icon2@1x.png 1x,
+            ./images/customers/customers-icon2@2x.png 2x
           "
-          src="./images/customers/customers-icon2@1x.jpg"
+          src="./images/customers/customers-icon2@1x.png"
           alt="first-icon"
         />
         <div class="customers">
