--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -8,34 +8,32 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    // flex-direction: column; 
 
     @media screen  and (min-width: 320px){
         flex-direction: column;
         
     }
     @media screen  and (min-width: 1280px){
-        display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-
     }
 }
 
 .hero__info{
     
     @media screen  and (min-width: 320px){
-        width: 280px;
-        
+        width: 280px;    
     }
     @media screen  and (min-width: 768px){
-        width: 704px;
-        
+        width: 704px;    
     }
     @media screen  and (min-width: 1280px){
         width: 502px;
     }
 }
+
 .hero__title--top{
     color: var(--main-text-color);  
     @media screen  and (min-width: 320px){
@@ -52,11 +50,12 @@
         font-weight: 700;
         font-size: 48px;
         line-height: 120%;
-        margin-top: 0px;
+        margin-top: 158px;
         width: 503px;
 
     }
 }
+
 .hero__title--descript{
     color: var(--main-text-color);
     @media screen  and (min-width: 320px){
@@ -105,7 +104,6 @@
         
         position: relative;
         border: 26px solid var(--yellow-main);
-        margin-top: 16px;
         margin-right: 14px;
         width: 580px;
         height: 580px;
@@ -114,12 +112,13 @@
 
     }
 }
+
 .hero__foto--size{
     width: 580px;
 }
-.hero__slider--but-l{
-    height: 40px;
-    width: 48px;
+
+.hero__slider--but{
+    border: none;
     position: absolute;
     right: 545px;
     top: 259px;
@@ -132,37 +131,25 @@
         fill:  var(--dark-green);
     }
     @media screen  and (min-width: 768px){
-        right: 290px;
+        right: 300px;
         top: 135px;
-        height: 0px;
+        height: 28px;
+        width: 34px;
     }
     @media screen  and (min-width: 1280px){
         right: 520px;
         top: 250px;
         height: 40px;
+        width: 48px;
     }
 
 }
-.hero__slider--but-r{
-    height: 40px;
-    width: 48px;
-    position: absolute;
-    right: -40px;
-    top: 260px;
-    background: var(--bgc-main);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
-    border-radius: 8px;
-    transform: rotate(360deg);
-    align-items: center;
-    &:hover .hero__vector--color{
-        fill:  var(--dark-green);
-    } 
+.but-r{ 
     @media screen  and (min-width: 768px){
-        right: -33px;
+        right: -25px;
         top: 135px;
-        height: 0px;
-
-    }  
+        
+    }
     @media screen  and (min-width: 1280px){
         right: -40px;
         top: 250px;
@@ -177,28 +164,23 @@
         fill: var(--dark-green);
     }
 }
-.hero__vector--left{
-    height: 50px;
-    width: 50px;
- 
+.hero__vector{
     @media screen  and (min-width: 768px){
-        height: 35px;
+        transform: translate(-13px, 0px);
+        height: 30px;
         width: 45px;
         
     }
     @media screen  and (min-width: 1280px){
-        height: 47px;
+        
+        transform: translate(-6px, 2px);
+        height: 40px;
+        width: 45px;
     }
-}
-.hero__vector--right{
-    height: 40px;   
 }
 
 .hero__btn{
     background: var(--btn-default);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 150%;
     text-align: right;
     color: var(--main-text-color);
     border: none;
@@ -206,12 +188,12 @@
     width: 100px;
     text-align: center;
     @extend %btn;
-    @media screen  and (min-width: 320px){
-        margin-bottom: 28px;
+    @media screen  and (min-width: $tablet){
+        margin-bottom: 738px;
         
     }
     @media screen  and (min-width: 1280px){
-        margin-bottom: 0px;
+        margin-bottom: 164px;
     }
 
     &:hover{
