--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -18,12 +18,13 @@
             <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left" ></use>
           </svg>
         </button>
-
-      <picture>
-        <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: $desktop)"/>
-        <source srcset="./images/hero/hero1_768@1x.png 1x, ./images/hero/hero1_768@2x.png 2x" media="(min-width: 768px)"/>
-        <img class="hero__foto--size" src="./images/hero/hero1_768@1x.png" alt="Фото блюда"/>
-      </picture>
+        
+                <picture>
+                  <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: $desktop)"/>
+                  <source srcset="./images/hero/hero1_768@1x.png 1x, ./images/hero/hero1_768@2x.png 2x" media="(min-width: 768px)"/>
+                  <img class="hero__foto--size" src="./images/hero/hero1_768@1x.png" alt="Фото блюда"/>
+                </picture>
+      
 
         <button class="hero__slider--but but-r">
         <svg  class="hero__vector" >
@@ -34,5 +35,10 @@
       </div>
     </div>
   </div> 
+
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+        <!-- Initialize Swiper -->
+        <script src="./js/swiper.js"></script>
   
 </section>  
